--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -113,8 +113,9 @@ aside {
 }
 @media (min-width: 768px) {
   .navbar-default {
-    background-color: transparent;
-    border-color: rgba(255, 255, 255, 0.3);
+    background-color: #A52A2A;
+    opacity: 0.8;
+    /*border-color: rgba(255, 255, 255, 0.3);*/
   }
   .navbar-default .navbar-header .navbar-brand {
     color: rgba(0, 0, 0, 0.7);
@@ -162,10 +163,17 @@ header {
   -o-background-size: cover;
   background-position: bottom left;
   background-image: url('../img/header.svg');
-  background-color: #E0FFFF;
   text-align: center;
   color: white;
 }
+
+.grad{
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(to right, #F9B7B0, #F99F96, #F37E72);
+  z-index: -9999;
+}
+
 header .header-content {
   position: relative;
   text-align: center;
@@ -421,4 +429,8 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: #222222;
+}
+
+.nav {
+  padding-left: 30px;
 }
