--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -168,6 +168,7 @@ header {
 }
 
 .grad{
+  position: absolute;
   width: 100%;
   height: 100%;
   background-image: linear-gradient(to right, #F9B7B0, #F99F96, #F37E72);
@@ -203,7 +204,7 @@ header .header-content .header-content-inner p {
   }
   header .header-content {
     position: absolute;
-    top: 50%;
+    top: 20%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
@@ -433,4 +434,12 @@ body {
 
 .nav {
   padding-left: 30px;
+}
+
+.login {
+  border: 1px black solid;
+  padding: 10px;
+  background-color: white;
+  border-radius: 25px;
+  color: black;
 }
