--- a/cdn/css/login.css
+++ b/cdn/css/login.css
@@ -7,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /* reset */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+
 ol,ul{list-style:none;margin:0px;padding:0px;}
 blockquote,q{quotes:none;}
 blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
@@ -27,10 +28,6 @@ nav.vertical ul li{	display:block;}/* vertical menu */
 nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
-body{
-	font-family: 'Open Sans', sans-serif;
-	background: #00b7c9;
-}
 .header {
     text-align: center;
     margin-top: 4em;
@@ -43,15 +40,17 @@ body{
 }
 .main-section {
     width: 25%;
-    margin: 2em auto 0;
+    /*margin: 2em auto 0;*/
 	text-align: center;
 }
 .login-section {
     background: #fff;
+    font-family: 'Open Sans', sans-serif; 
 }
 .login-section h2 {
     padding: .6em 0;
-    background: #f99104;
+    background: #A52A2A;
+    opacity: 0.8;
     font-size: 1.5em;
     color: #fff;
 	font-family: 'Josefin Sans', sans-serif;
@@ -63,7 +62,7 @@ body{
 }
 .login-top {
     padding: 1em 0;
-	border-bottom: 1px solid #f99104;
+	border-bottom: 1px solid #A52A2A;
 }
 .login-top ul li {
     padding: .8em 0;
@@ -101,7 +100,7 @@ body{
     outline: none;
     margin: 1em 0;
 	border-radius: 4px;
-    border: 1px solid#f99104;
+    border: 1px solid#A52A2A;
     outline: none;
     color: #555;
 }
@@ -110,7 +109,7 @@ body{
     padding: .8em 1em;
     outline: none;
     border-radius: 4px;
-    border: 1px solid#f99104;
+    border: 1px solid#A52A2A;
     outline: none;
     color: #555;
 }
@@ -133,7 +132,7 @@ body{
 }
 .login-bottom {
     padding: 1em 2em 4em;
-    border-top: 1px solid #f99104;
+    border-top: 1px solid #A52A2A;
 }
 .login-left p {
     font-size: .8em;
@@ -142,11 +141,11 @@ body{
 }
 .login-left a {
     font-size: 1em;
-    color: #f99104;
+    color: #A52A2A;
 }
 .login-right input[type="button"] {
     padding: .5em 1em;
-    background: #f99104;
+    background: #A52A2A;
     outline: none;
     border: none;
     font-size: 1em;
@@ -179,7 +178,7 @@ body{
     color: #fff;
 }
 .footer p a:hover {
-    color: #f99104;
+    color: #A52A2A;
 }
 /**responsive*/
 @media (max-width:1440px){
