--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -650,3 +650,54 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+/* Formulario Contato -*/
+.background{
+  background-color: #8B1A1A;
+}
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1.5px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+.contato {   
+    box-shadow: 2px 2px 2px #8B7D7B;
+    border: 1px solid #EEE9E9;
+    border-radius: 5px;
+    background-color:#FDF5E6;
+    padding: 20px;
+    text-align: center;
+    box-sizing: border-box;
+    width: 50%;  
+    position: absolute;
+    margin-left: 300px;
+    margin-right: 300px;
+}
+h3 {
+ font-family: 'Pacifico', cursive, Timer New Roman;
+ font-size: 36px;
+ text-align: left;
+ margin-left: 550px;
+ margin-right: 550px;
+ color: white;
+}
+input[type=submit] {
+    background-color: #8B1A1A;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: open sans, Timer New Roman;
+    
+}
+h2{
+ font-family:'merriweather',open sans,Timer New Roman;
+ font-size: 20px;
+ text-align: left;
+ text-shadow: 1px 1px #696969;
+}
