--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -495,7 +495,6 @@ header{
   .inicio {
       position: fixed;
   }
-
 }
 
 /* LOGIN */
@@ -573,7 +572,6 @@ header{
     CONTATO
 -----------------------------------*/
 .contato {
-  position: fixed;
   width: 100%;
   min-height: 100%;
   -webkit-background-size: cover;
@@ -584,10 +582,78 @@ header{
   background-image: url('../img/svg/header.svg');
 }
 
+.contato .header-content {
+  top: 54%;
+}
+
+@media (min-width: 768px) {
+  .contato {
+      position: fixed;
+  }
+}
+
 .contato h1{
-  font-family:'Pacifico', cursive, Arial;
-  font-size-adjust:34px;
-  text-align:center;
+  font-family: 'Pacifico', 'cursive', Arial;
+  font-size-adjust: 34px;
+  text-align: center;
+}
+
+/* Formulario -*/
+
+/*.background-contato{
+  background-color: #8B1A1A;
+}*/
+
+input[type=text], select, textarea {
+    width: 90%;
+    padding: 12px;
+    border: 1.5px solid #ccc;
+    color: black;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+.contato-box {   
+    box-shadow: 2px 2px 2px #8B7D7B;
+    border: 1px solid #EEE9E9;
+    border-radius: 5px;
+    background-color:#FDF5E6;
+    padding: 20px;
+    text-align: center;
+    box-sizing: border-box;
+    /*width: 50%;  */
+    /*margin-left: 10%;
+    margin-right: 10%;*/
+}
+.contato-titulo {
+  font-family: 'Pacifico', 'cursive', 'Timer New Roman';
+  font-size: 36px;
+  color: #55B562;
+  padding-bottom: 20px;
+}
+
+input[type=button] {
+  background-color: #8B1A1A;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: 'Open Sans', 'Timer New Roman';
+}
+
+.contato-sub {
+  font-family:'Merriweather','Open Sans','Timer New Roman';
+  font-size: 20px;
+  text-align: left;
+  text-shadow: 1px 1px #696969;
+  color: crimson;
+}
+
+.contato-assunto {
+  height: 101px;
 }
 
 /*-----------------------------------
@@ -650,57 +716,6 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/* Formulario Contato -*/
-.background{
-  background-color: #8B1A1A;
-}
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1.5px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-}
-.contato {   
-    box-shadow: 2px 2px 2px #8B7D7B;
-    border: 1px solid #EEE9E9;
-    border-radius: 5px;
-    background-color:#FDF5E6;
-    padding: 20px;
-    text-align: center;
-    box-sizing: border-box;
-    width: 50%;  
-    position: absolute;
-    margin-left: 300px;
-    margin-right: 300px;
-}
-.contato-titulo {
- font-family: 'Pacifico', cursive, Timer New Roman;
- font-size: 36px;
- text-align: left;
- margin-left: 550px;
- margin-right: 550px;
- color: white;
-}
-input[type=submit] {
-    background-color: #8B1A1A;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: open sans, Timer New Roman;
-    
-}
-.contato-sub{
- font-family:'merriweather',open sans,Timer New Roman;
- font-size: 20px;
- text-align: left;
- text-shadow: 1px 1px #696969;
-}
 
 /*-----------------------------------
     LOGOMARCA
@@ -713,4 +728,11 @@ input[type=submit] {
   float: left;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.alto-contraste  {
+  background: black !important;
+  background-image: none !important;
+  color: white !important;
+  border: 1px solid #FFFFFF !important;
 }
