--- a/cdn/css/login.css
+++ b/cdn/css/login.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*--
 Author: W3layouts
 Author URL: http://w3layouts.com
@@ -5,7 +6,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 /* reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+div,h2, form, p, input, a{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
 
 ol,ul{list-style:none;margin:0px;padding:0px;}
@@ -95,7 +96,7 @@ img{max-width:100%;}
     color: #fff;
 }
 .login-middle input[type="text"] {
-    width: 50%;
+    /*width: 50%;*/
     padding: .8em 1em;
     outline: none;
     margin: 1em 0;
@@ -105,7 +106,7 @@ img{max-width:100%;}
     color: #555;
 }
 .login-middle input[type="password"] {
-    width: 50%;
+    /*width: 50%;*/
     padding: .8em 1em;
     outline: none;
     border-radius: 4px;
@@ -184,12 +185,14 @@ img{max-width:100%;}
 @media (max-width:1440px){
 }
 @media (max-width:1366px){
-.login-middle input[type="text"] {
-    width: 53%;
+.login-middle input[type="text"], input[type="password"] {
+    /*width: 53%;*/
+    width: 80%;
 }
-.login-middle input[type="password"] {
+/*.login-middle input[type="password"] {
     width: 53%;
-}
+    width: 80%;
+}*/
 }
 @media (max-width: 1280px){
 .login-middle input[type="text"] {
