--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -187,6 +187,12 @@ header .header-content .header-content-inner p {
   font-size: 16px;
   margin-bottom: 50px;
 }
+
+.header-content-inner {
+
+  margin-bottom: 3%;
+
+}
 @media (min-width: 768px) {
   header {
     min-height: 100%;
@@ -203,6 +209,7 @@ header .header-content .header-content-inner p {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 6%;
   }
   header .header-content .header-content-inner h1 {
     font-size: 50px;
