--- a/cdn/css/login.css
+++ b/cdn/css/login.css
@@ -96,7 +96,7 @@ img{max-width:100%;}
     color: #fff;
 }
 .login-middle input[type="text"] {
-    /*width: 50%;*/
+    width: 80%;
     padding: .8em 1em;
     outline: none;
     margin: 1em 0;
@@ -106,7 +106,7 @@ img{max-width:100%;}
     color: #555;
 }
 .login-middle input[type="password"] {
-    /*width: 50%;*/
+    width: 80%;
     padding: .8em 1em;
     outline: none;
     border-radius: 4px;
@@ -185,14 +185,14 @@ img{max-width:100%;}
 @media (max-width:1440px){
 }
 @media (max-width:1366px){
-.login-middle input[type="text"], input[type="password"] {
+.login-middle input[type="text"] {
     /*width: 53%;*/
     width: 80%;
 }
-/*.login-middle input[type="password"] {
-    width: 53%;
+.login-middle input[type="password"] {
+    /*width: 53%;*/
     width: 80%;
-}*/
+}
 }
 @media (max-width: 1280px){
 .login-middle input[type="text"] {
