--- a/cdn/css/faq.css
+++ b/cdn/css/faq.css
@@ -42,47 +42,30 @@ Customized CSS
 
 /* Box Styling */
 
-.info-box-green, .info-box-red, .info-box-sky {
+.info-box {
   /*margin: 50px auto;*/
+  margin-bottom: 1.5%;
   padding: 0;
-  width: 100%;
+  /*width: 100%;*/
  	-webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 8px 6px -6px black;
 	        box-shadow: 0 8px 6px -6px black;
 }
 
-.info-box-red h4 {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  margin-bottom: -10px;
+.info-box h4, .info-box > .info-content > .text {
+  background-color: #A52A2A;
 }
 
-.info-box-red > .info-content > .text {
- -webkit-border-radius: 0 0 10px 10px;
-  border-radius: 0 0 10px 10px; 
-}
-
-.info-box-green h4, .info-box-green > .info-content > .text {
- background-color: #00AB83;
-}
-
-.info-box-red h4, .info-box-red > .info-content > .text {
-  background-color: #FF434C;
-}
-
-.info-box-sky h4, .info-box-sky > .info-content > .text {
-  background-color: #00A5C3;
-}
-
-.info-box-green h4, .info-box-red h4, .info-box-sky h4 {
-  padding: 25px;
-  font-size: 1.125em;
+.info-box h4 {
+  padding: 20px;
+  font-size: 2em;
   font-weight: 400;
   color: #FFF;
   margin: 0px;
+ 
 }
 
-.info-box-green > .info-content > .text, .info-box-red > .info-content > .text, .info-box-sky > .info-content > .text {
+.info-box > .info-content > .text {
   padding: 0px;
   font-size: 1em;
   line-height: 1.5em;
@@ -95,53 +78,13 @@ Customized CSS
           transition:  height 200ms ease;
 }
 
-.info-box-green > .info-content > .text > p, .info-box-red > .info-content > .text > p, .info-box-sky > .info-content > .text > p {
+.info-box > .info-content > .text > p {
   padding: 20px 20px 60px;
 }
 
-.info-box-sky > .info-content > .text {
+.info-box > .info-content > .text {
   background-color: #FFF;
   color: #444;
   border-radius: 0;
 }
- 
-.info-box-green > .info-content > .text.open-green, .info-box-red > .info-content > .text.open-red, .info-box-sky > .info-content > .text.open-sky {
-  display: block;
-  height: auto;
-}
 
-.info-box-green > .info-content > span.close-green, .info-box-red > .info-content > span.close-red, .info-box-sky > .info-content > span.close-sky {
-  -webkit-transform:rotate(135deg);
-     -moz-transform:rotate(135deg);
-       -o-transform:rotate(135deg);
-      -ms-transform:rotate(135deg);
-}
-
-.info-box-green span, .info-box-red span, .info-box-sky span {
-  display: inline-block;
-  float: right;
-  position: relative;
-  bottom: 60px;
-  right: 10px;
-  margin: 0;
-  padding: 10px;
-  color: #FFF;
-  font-size: 2em;
-  cursor: pointer;
-  /*  Rotate '+' to 'X' */
-  -webkit-transition: all 600ms ease-in-out; 
-     -moz-transition: all 600ms ease-in-out; 
-       -o-transition: all 600ms ease-in-out; 
-      -ms-transition: all 600ms ease-in-out; 
-          transition: all 600ms ease-in-out;
-}
-
-.info-box-sky > .info-content > span.close-sky {
-  color: #444;
-}
-
-.info-box-red span {
-  position: relative;
-  bottom: 50px;
-  right: 10px;
-}
