--- a/cdn/css/login.css
+++ b/cdn/css/login.css
@@ -279,5 +279,6 @@ img{max-width:100%;}
 }
 
 .btn-tiny{
-    font-size: 9px !important;
+    font-size: 12px !important;
+    text-align: center;
 }
