--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -212,13 +212,17 @@ header .header-content .header-content-inner p {
     margin-top: 6%;
   }
   header .header-content .header-content-inner h1 {
-    font-size: 50px;
+    font-size: 56px;
+	color: white;
+	
   }
   header .header-content .header-content-inner p {
-    font-size: 18px;
+    font-size: 24px;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+	color: white;
+	font-family: 'Pacifico', Times New Roman;
   }
 }
 .section-heading {
@@ -528,15 +532,23 @@ header{
   background-image: url('../img/svg/header.svg');
 }
 .quemsomos h3 {
-  text-align: left;
-  border: 1px solid #A52A2A;
+  border: 3px solid #A52A2A;
   background-color: rgba(165, 42, 42, 0.8);
+  border-radius: 15px;
+  padding: 15px; 
+  text-align: justify; 
+  width: 50%;
+  margin-left: 25%;
+  
 }
 .quemsomos .header-content {
-  top: 20%;
+  top: 30%;
+  margin-left: 5% 5%;
 }
 .quemsomos h1 {
-  font-family: Arial;
+  font-family: 'Pacifico', Times New Roman, Arial;
+  font-size: 70px;
+  margin-top: 5%;
 }
 
 
@@ -812,6 +824,9 @@ div .alto-contraste .main {
   .cadastro {
       position: fixed;
   }
+  .cadastro .header-content{
+    top: 52%;
+  }
 }
 
 .wizard {
@@ -958,14 +973,107 @@ div .alto-contraste .main {
     }
 }
 
-.i-middle {
-  top: 1.5px;
-}
-
 .clearfix {
   padding: 20px;
 }
 
 .wizard .tab-content {
   color: black;
+}
+
+.sel-cad-right {
+  width: 212px;
+  float: left;
+}
+
+.sel-cad-left {
+  width: 212px;
+  float: right;
+}
+
+.selecionar-cadastro {
+  padding: 0 28px;
+  padding-top: 31px;
+  padding-bottom: 27px;
+  background: rgba(165, 42, 42, 0.8);;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+}
+
+.selecionar-cadastro-img {
+  width: 155px;
+  height: 155px;
+  position: relative;
+  margin-bottom: 25px;
+  background: rgba(150, 42, 42, 0.8);;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+}
+
+.selecionar-cadastro-img.ativo  {
+  width: 155px;
+  height: 155px;
+  position: relative;
+  margin-bottom: 25px;
+  background: rgb(247, 204, 204);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+}
+
+.selecionar-cadastro-p {
+  margin: 0;
+  line-height: 20px;
+  text-transform: none;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  color: #fff;
+  text-align: center;
+}
+
+.selecionado-cadastro {
+  margin-top: 10px;
+  padding-top: 10px;
+  border-top: 1px solid rgba(130, 42, 42, 0.8);;
+}
+
+.selecionado-cadastro span {
+  line-height: 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: left;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  color: #26272e;
+}
+
+.icone-centralizado {
+  margin-top: 25%;
+}
+
+.cadastro-inicio {
+  left: 37.5%;
 }
