--- a/cdn/css/faq.css
+++ b/cdn/css/faq.css
@@ -1,6 +1,3 @@
-/* Font Icons from WeLoveIconFonts */
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-
 /* ClearFix Hack */
 
 .cf:before,
@@ -53,7 +50,8 @@ Customized CSS
 }
 
 .info-box h4, .info-box > .info-content > .text {
-  background-color: #A52A2A;
+  	background-color: #de5453;
+	border-radius: 24px;
 }
 
 .info-box h4 {
@@ -87,4 +85,6 @@ Customized CSS
   color: #444;
   border-radius: 0;
 }
-
+.info p{
+	background-color: rgba(165, 42, 42, 0.8);	
+}
