--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -640,7 +640,7 @@ header{
   background-color: #8B1A1A;
 }*/
 
-input[type=text], select, textarea {
+.header-content > input[type=text], select, textarea {
     width: 90%;
     padding: 12px;
     border: 1.5px solid #ccc;
@@ -806,274 +806,96 @@ div .alto-contraste .main {
   opacity: 0.8;
 }
 
-/*-----------------------------------
-   CADASTRO
------------------------------------*/
-.cadastro {
-  width: 100%;
-  min-height: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-repeat: no-repeat;
-  -o-background-size: cover;
-  background-position: bottom left;
-  background-image: url('../img/svg/header.svg');
-}
-
-@media (min-width: 768px) {
-  .cadastro {
-      position: fixed;
-  }
-  .cadastro .header-content{
-    top: 52%;
-  }
-}
-
-.wizard {
-    margin: 20px auto;
-    background: #fff;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-    .wizard .nav-tabs {
-        position: relative;
-        margin: 40px auto;
-        background: rgba(165, 42, 42, 0.8);
-        margin-bottom: 0;
-        border-bottom-color: #e0e0e0;
-    }
-
-    .wizard > div.wizard-inner {
-        position: relative;
-    }
-
-.wizard .connecting-line {
-    height: 2px;
-    background: #e0e0e0;
-    position: absolute;
-    width: 70%;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 50%;
-    z-index: 1;
-}
-
-.wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
-    color: #555555;
-    cursor: default;
-    border: 0;
-    border-bottom-color: transparent;
-}
-
-.wizard span.round-tab {
-    width: 70px;
-    height: 70px;
-    line-height: 70px;
-    display: inline-block;
-    border-radius: 100px;
-    background: #fff;
-    border: 2px solid #e0e0e0;
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    text-align: center;
-    font-size: 25px;
-}
-.wizard span.round-tab i{
-    color:#555555;
-}
-.wizard li.active span.round-tab {
-    background: #fff;
-    border: 4px solid #A80101;
-    
-}
-.wizard li.active span.round-tab i{
-    color: #A52A2A;
-}
-
-.wizard span.round-tab:hover {
-    color: #333;
-    border: 2px solid #333;
-}
-
-.wizard .nav-tabs > li {
-    width: 25%;
-}
-
-.wizard li:after {
-    content: " ";
-    position: absolute;
-    left: 46%;
-    opacity: 0;
-    margin: 0 auto;
-    bottom: 0px;
-    border: 5px solid transparent;
-    border-bottom-color: #A52A2A;
-    transition: 0.1s ease-in-out;
-}
-
-.wizard li.active:after {
-    content: " ";
-    position: absolute;
-    left: 46%;
-    opacity: 1;
-    margin: 0 auto;
-    bottom: 0px;
-    border: 10px solid transparent;
-    border-bottom-color: #A80101;
-}
-
-.wizard .nav-tabs > li a {
-    width: 70px;
-    height: 70px;
-    margin: 20px auto;
-    border-radius: 100%;
-    padding: 0;
-}
-
-    .wizard .nav-tabs > li a:hover {
-        background: transparent;
-    }
-
-.wizard .tab-pane {
-    position: relative;
-    padding-top: 50px;
-}
-
-.wizard h3 {
-    margin-top: 0;
-}
-
-@media( max-width : 585px ) {
-
-    .wizard {
-        width: 90%;
-        height: auto !important;
-    }
-
-    .wizard span.round-tab {
-        font-size: 16px;
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    .wizard .nav-tabs > li a {
-        width: 50px;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    .wizard li.active:after {
-        content: " ";
-        position: absolute;
-        left: 35%;
-    }
-}
-
-.clearfix {
-  padding: 20px;
-}
-
-.wizard .tab-content {
-  color: black;
-}
-
-.sel-cad-right {
-  width: 212px;
-  float: left;
-}
-
-.sel-cad-left {
-  width: 212px;
-  float: right;
-}
-
-.selecionar-cadastro {
-  padding: 0 28px;
-  padding-top: 31px;
-  padding-bottom: 27px;
-  background: rgba(165, 42, 42, 0.8);;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+.sel-cad-right { 
+  width: 212px; 
+  float: left; 
+} 
+ 
+.sel-cad-left { 
+  width: 212px; 
+  float: right; 
+} 
+ 
+.selecionar-cadastro { 
+  padding: 0 28px; 
+  padding-top: 31px; 
+  padding-bottom: 27px; 
+  background: rgba(165, 42, 42, 0.8);; 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+  -moz-background-clip: padding; 
+  -webkit-background-clip: padding-box; 
+  background-clip: padding-box; 
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+} 
+ 
+.selecionar-cadastro-img { 
+  width: 155px; 
+  height: 155px; 
+  position: relative; 
+  margin-bottom: 25px; 
+  background: rgba(150, 42, 42, 0.8);; 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+  -moz-background-clip: padding; 
+  -webkit-background-clip: padding-box; 
+  background-clip: padding-box; 
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
   box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-}
-
-.selecionar-cadastro-img {
-  width: 155px;
-  height: 155px;
-  position: relative;
-  margin-bottom: 25px;
-  background: rgba(150, 42, 42, 0.8);;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-}
-
-.selecionar-cadastro-img.ativo  {
-  width: 155px;
-  height: 155px;
-  position: relative;
-  margin-bottom: 25px;
-  background: rgb(247, 204, 204);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
-}
-
-.selecionar-cadastro-p {
-  margin: 0;
-  line-height: 20px;
-  text-transform: none;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  color: #fff;
   text-align: center;
+} 
+ 
+.selecionar-cadastro-img.ativo  { 
+  width: 155px; 
+  height: 155px; 
+  position: relative; 
+  margin-bottom: 25px; 
+  background: rgb(247, 204, 204); 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+  -moz-background-clip: padding; 
+  -webkit-background-clip: padding-box; 
+  background-clip: padding-box; 
+  -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+} 
+ 
+.selecionar-cadastro-p { 
+  margin: 0; 
+  line-height: 20px; 
+  text-transform: none; 
+  text-decoration: none; 
+  font-size: 16px; 
+  font-weight: normal; 
+  font-style: normal; 
+  color: #fff; 
+  text-align: center; 
+} 
+ 
+.selecionado-cadastro { 
+  margin-top: 10px; 
+  padding-top: 10px; 
+  border-top: 1px solid rgba(130, 42, 42, 0.8);; 
+} 
+ 
+.selecionado-cadastro span { 
+  line-height: 16px; 
+  text-transform: uppercase; 
+  text-decoration: none; 
+  text-align: left; 
+  font-size: 18px; 
+  font-weight: bold; 
+  font-style: normal; 
+  color: #26272e; 
 }
 
-.selecionado-cadastro {
-  margin-top: 10px;
-  padding-top: 10px;
-  border-top: 1px solid rgba(130, 42, 42, 0.8);;
-}
-
-.selecionado-cadastro span {
-  line-height: 16px;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: left;
-  font-size: 18px;
-  font-weight: bold;
-  font-style: normal;
-  color: #26272e;
-}
-
-.icone-centralizado {
-  margin-top: 25%;
-}
-
-.cadastro-inicio {
-  left: 37.5%;
-}
+.icone-centralizado { 
+  margin-top: 25%; 
+} 
