--- a/cdn/css/creative.css
+++ b/cdn/css/creative.css
@@ -768,11 +768,12 @@ div .alto-contraste .main {
   background-clip: padding-box; 
   -webkit-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
   -moz-box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
-  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8); 
+  box-shadow: 0 5px 0 0 rgba(110, 42, 42, 0.8);
+  margin-bottom: 10px;
 } 
  
 .selecionar-cadastro-img { 
-  width: 155px; 
+  width: 100%; 
   height: 155px; 
   position: relative; 
   margin-bottom: 25px; 
@@ -790,7 +791,7 @@ div .alto-contraste .main {
 } 
  
 .selecionar-cadastro-img.ativo  { 
-  width: 155px; 
+  width: 100%; 
   height: 155px; 
   position: relative; 
   margin-bottom: 25px; 
@@ -839,11 +840,35 @@ div .alto-contraste .main {
   margin-top: 25%; 
 } 
 
-input[type=radio], input[type=checkbox] {
+@media (max-width: 320px) {
+  .icone-centralizado { 
+    margin-top: 22%; 
+  } 
+}
+
+@media (max-width: 375px) {
+  .icone-centralizado { 
+    margin-top: 18%; 
+  } 
+}
+
+@media (max-width: 425px) {
+  .icone-centralizado { 
+    margin-top: 14%; 
+  } 
+}
+
+@media (min-width: 768px) {
+  .icone-centralizado { 
+    margin-top: 10%; 
+  } 
+}
+
+input[type=radio]{
 		display:none;
 	}
 
-input[type=radio] + label, input[type=checkbox] + label {
+input[type=radio] + label {
 		display:inline-block;
 		padding: 4px 12px;
 		margin-bottom: 0;
@@ -873,13 +898,9 @@ input[type=radio] + label, input[type=checkbox] + label {
 		box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
 	}
 
-	 input[type=radio]:checked + label, input[type=checkbox]:checked + label{
+	 input[type=radio]:checked + label{
 		   background-image: none;
 		outline: 0;
 		-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
 		-moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-   }
-
-   .col-md-6.centro{
-     text-align: center;
    }
