--- a/cdn/css/cadastro.css
+++ b/cdn/css/cadastro.css
@@ -256,6 +256,10 @@
         width: 31.623931623931625%;
         *width: 31.570740134569924%
     }
+    .row-fluid .span3meio {
+        width: 28.623932%;
+        *width: 31.570740134569924%
+    }
     .row-fluid .span3 {
         width: 23.076923076923077%;
         *width: 23.023731587561375%
