--- a/cdn/css/cadastro.css
+++ b/cdn/css/cadastro.css
@@ -2129,3 +2129,10 @@ body{
     float: right;
    }
    
+   .icon-green {
+       color: green;
+   }
+
+    .icon-red {
+        color: red;
+   }
