--- a/cdn/css/cadastro.css
+++ b/cdn/css/cadastro.css
@@ -1336,7 +1336,7 @@
   -webkit-box-shadow: inset 0 0 0 80px rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 0 80px rgba(0, 0, 0, .5);
   text-decoration: none;
-  cursor: pointer
+  /*cursor: pointer*/
 }
 
 .tabbable.custom-tabs>.tab-content .socials a.facebook {
