--- a/cdn/css/sb-admin-2.css
+++ b/cdn/css/sb-admin-2.css
@@ -5,6 +5,7 @@
  */
 body {
   background-color: #f8f8f8;
+  height: 100%;
 }
 #wrapper {
   width: 100%;
@@ -465,3 +466,21 @@ form.login button {
 .right {
   float: right;
 }
+
+#map {
+  min-height: 275px;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+div#map div div.gm-style div.gmnoprint div.gm-style-mtc {
+  display: none;
+  background:none !important;
+}
+
+/*#map {
+  height: 275px;
+  width: 100%;
+  margin-bottom: 15px;
+}*/
