--- a/cdn/css/sb-admin-2.css
+++ b/cdn/css/sb-admin-2.css
@@ -515,6 +515,7 @@ div#map div div.gm-style div.gmnoprint div.gm-style-mtc {
 .boxReq:hover {
   background-color: gray;
   -webkit-transition: 2s;
+  transition: 2s;
 
 }
 
@@ -615,4 +616,8 @@ a.req-category:hover, a.req-category:focus{
 .col-exception-padding {
   padding-left: 5px !important;
   padding-right: 5px !important;
+}
+
+.painel_loading {
+  width: 40%; 
 }
